docker/user-java/trips-user-java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  namespace: api
  labels:
    app: trips
    component: user-java
spec:
  selector:
    matchLabels:
      app: trips
      component: user-java
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: trips
        component: user-java
    spec:
      containers:
      - name: user-java
        image: registryucj0309.azurecr.io/tripinsights/user-java:1.0
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-kvname-user-msi
